# grSDK

./: .Makefile.swp  .directory  .exrc  .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  GRSDK.cpp  Makefile  Makefile.1  Makefile.alg  Makefile.newAlg  Makefile.old  Makefile.qt  Makefile.template  Makefile.tmp  Makefile.visu  README.md  axis_plot_bh.m  binding.gyp  build_ble_lib.sh  build_grt.sh  extern_assets  gestusVisualisation.pro  imgui.ini  mk  moc_gestusDataPlotter.cpp  moc_gestusGLWidget.cpp  moc_gestusVisualization.cpp  moc_qcustomplot.cpp  out  output.txt  package.json  pcb_things.txt  plot2d.m  plot_orientation.m  prerequisites.sh  script.js  show_undefined_symbols.sh  test.js  (+2 more)
config/: .directory  GRVisualisation.pro  Makefile  adapter.cfg  bluez.cfg  device.cfg  gestusVisualisation.pro  gestusVisualisation.ui  grVisualisation.ui  ui_gestusVisualisation.h
config/generated_files/: moc_gestusVisualization.cpp  moc_qcustomplot.cpp
docs/: Doxyfile  MAINPAGE.md  README.md  README.txt  compiling.txt  footer.html  header.html  tree.md
docs/pages/: GRVISUALIZATION.md  LICENSE.md  MAINPAGE.md  SAMPLES.md
experimental/: gestusLEConnection.cpp  grAlgorithmNew.cpp  grAlgorithmNew.h  grConnectionSocket.cpp  grConnectionSocket.h  grDevManager.h
experimental/libs/: low_level.py
externAssets/create_ap/: create_ap  (+2 more)
generated_files/: moc_gestusDataPlotter.cpp  moc_gestusGLWidget.cpp  moc_gestusVisualization.cpp  moc_qcustomplot.cpp
inc/: .gestusConnection.h.swp  Arm.h  Dimensions.h  GRGLWidget.h  GuiMethods.h  Node.h  README.txt  Renderer.h  VGui.h  arm.h  dimensions.h  gestusAlgorithm.h  gestusBufferManager.h  gestusConnection.h  gestusDataPlotter.h  gestusGLWidget.h  gestusHand.h  gestusHandNode.h  gestusLEConnection.h  gestusRender.h  gestusVisualisation.h  gestusVisualization.h  grAlgorithm.h  grBluezAttributes.h  grBufferManager.h  grConnection.h  grDataAttributes.h  grDataPlotter.h  grDataStructs.h  grDevManager.h  grDevScanner.h  grDevice.h  grGrt.h  grHand.h  grHandNode.h  grLEBluezAttributes.h  grMadgwick.h  grRender.h  grSocket.h  grTrajectory.h  (+8 more)
lib/: README.txt
log/: README.txt
qt_opengl/: .directory  Makefile  QT_OpenGL  QT_OpenGL.pro  QT_OpenGL.pro.user.0183d87.18  QT_OpenGL.pro.user.65c526e.3.3-pre1  QT_OpenGL.pro.user.fe488de.18  arm.cpp  arm.h  dataplotter.cpp  dataplotter.cpp.autosave  dataplotter.h  dimensions.h  glwidget.cpp  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow_BACKUP_4908.cpp  mainwindow_BASE_4908.cpp  moc_dataplotter.cpp  moc_glwidget.cpp  moc_qcustomplot.cpp  node.h  node_copy.cpp  ui_mainwindow.h
qt_opengl_old/: dataplotter.cpp  dataplotter.h  glwidget.h  main.cpp  mainwindow.cpp  mainwindow_LOCAL_4990.cpp  moc_qcustomplot.cpp  renderer.h  ui_mainwindow.h
samples/: README.txt
src/: .gestusConnection.cpp.swp  .storemain.cpp.kate-swp  Arm.cpp  GRGLWidget.cpp  README.txt  Renderer.cpp  VGui.cpp  arm.cpp  gestusAlgorithm.cpp  gestusBufferManager.cpp  gestusConnection.cpp  gestusDataPlotter.cpp  gestusGLWidget.cpp  gestusHand.cpp  gestusLEConnection.cpp  gestusRender.cpp  gestusUtilites.cpp  gestusVisualisation.cpp  gestusVisualization.cpp  grAlgorithm.cpp  grBufferManager.cpp  grConnection.cpp  grDataPlotter.cpp  grDevManager.cpp  grDevScanner.cpp  grDevice.cpp  grGrt.cpp  grHand.cpp  grHandNode.cpp  grMadgwick.cpp  grRender.cpp  grSocket.cpp  grTrajectory.cpp  grUiSrv.cpp  grUtilites.cpp  grUtilities.cpp  grVisualization.cpp  main.cpp  main.cpp.dtw  main.cpp.ncurses  (+12 more)
trainingModelsAndData/: DTWModel.grt  DTWTrainingData.grt
(+357 files in other folders)
